# rotinesSPtrade

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  STRATEGY.md  compose.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
dashboard_template/: index.html.j2
dashboard_template/assets/: style.css
deploy/vps/: deploy.sh
docker/cron/: spy-trader.cron  start-cron.sh
docs/superpowers/plans/: 2026-04-18-paper-trading-agent-part1-core.md
docs/superpowers/specs/: 2026-04-18-paper-trading-agent-design.md
spy_trader/: __init__.py  aar.py  alpaca_client.py  calendar_feed.py  claude_review.py  cli.py  clock.py  config.py  cron.py  dashboard.py  data.py  events.py  fill_watcher.py  journal.py  notifier.py  orders.py  risk.py  screens.py  sizing.py  state.py
spy_trader/indicators/: channel.py  ema.py  force_index.py  impulse.py  macd.py  safezone.py  stochastic.py
tests/: conftest.py  test_config.py  test_dashboard.py  test_events.py  test_notifier.py  test_sizing_risk_screens.py  test_state.py
tests/fixtures/: bars.py
tests/indicators/: test_channel.py  test_ema.py  test_force_index.py  test_impulse.py  test_macd.py  test_safezone.py  test_stochastic.py
